--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,8 @@
 	<classpathentry kind="lib" path="lib/commons/lib/commons.exec-sources.jar"/>
 	<classpathentry kind="lib" path="lib/commons/lib/commons.exec-tests.jar"/>
 	<classpathentry kind="lib" path="lib/commons/lib/commons.exec.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/ikonli-javafx-11.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/ikonli-core-11.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Admin/Downloads/ikonli-fontawesome-pack-11.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
