--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 11.0.2 [11.0.2]">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -26,5 +26,10 @@
 	<classpathentry kind="lib" path="lib/icons/ikonli-core-11.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/icons/ikonli-fontawesome-pack-11.1.0.jar"/>
 	<classpathentry kind="lib" path="lib/icons/ikonli-javafx-11.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/terminalfx/terminalfx-1.0.9-sources.jar"/>
+	<classpathentry kind="lib" path="lib/terminalfx/terminalfx-1.0.9.jar"/>
+	<classpathentry kind="lib" path="lib/controlsfx/controlsfx-9.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/controlsfx/controlsfx-samples-9.0.0.jar"/>
+	<classpathentry kind="lib" path="lib/controlsfx/fxsampler-1.0.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
