--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<groupId>zenit</groupId>
 	<artifactId>zenit</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.openjfx</groupId>
@@ -50,6 +51,11 @@
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4</artifactId>
 			<version>4.7.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.miguelfonseca.completely</groupId>
+			<artifactId>completely-core</artifactId>
+			<version>0.8.0</version>
 		</dependency>
 	</dependencies>
 
