--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,18 @@
 			<artifactId>antlr4</artifactId>
 			<version>4.7.2</version>
 		</dependency>
+		
+		<dependency>
+	        <groupId>org.kordamp.ikonli</groupId>
+	        <artifactId>ikonli-javafx</artifactId>
+	        <version>11.3.3</version>
+	    </dependency>
+		
+		<dependency>
+		    <groupId>org.kordamp.ikonli</groupId>
+		    <artifactId>ikonli-fontawesome-pack</artifactId>
+		    <version>11.3.3</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
