--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
 			<version>1.3</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+			<version>11.0.0</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4 -->
 		<dependency>
 			<groupId>org.antlr</groupId>
