--- a/config.properties
+++ b/config.properties
@@ -95,3 +95,5 @@ primary=\#800080
 primary=\#008000
 #Wed May 22 13:03:28 CEST 2019
 primtint=\#CCCC66
+#Wed May 22 14:12:54 CEST 2019
+primary=\#B36680
