Custom Theme working good
Switching darkmode on/off while Custom theme is active (and vice versa) doesn't mess everything up anymore.

--- a/config.properties
+++ b/config.properties
@@ -97,3 +97,19 @@ primary=\#008000
 primtint=\#CCCC66
 #Wed May 22 14:12:54 CEST 2019
 primary=\#B36680
+#Thu May 23 10:44:34 CEST 2019
+primary=\#B34D1A
+#Thu May 23 11:44:55 CEST 2019
+primary=\#80334D
+#Thu May 23 11:44:58 CEST 2019
+primary=\#4D804D
+#Thu May 23 11:45:39 CEST 2019
+secondary=\#CCFFCC
+#Thu May 23 11:45:44 CEST 2019
+secondtint=\#00FFFF
+#Thu May 23 12:59:04 CEST 2019
+secondtint=\#FF00FF
+#Thu May 23 12:59:06 CEST 2019
+secondtint=\#00FF00
+#Thu May 23 12:59:09 CEST 2019
+primary=\#800080
