--- a/config.properties
+++ b/config.properties
@@ -113,3 +113,31 @@ secondtint=\#FF00FF
 secondtint=\#00FF00
 #Thu May 23 12:59:09 CEST 2019
 primary=\#800080
+#Thu May 23 21:45:18 CEST 2019
+primary=\#FF0000
+#Thu May 23 21:45:23 CEST 2019
+primary=\#0000FF
+#Thu May 23 21:45:25 CEST 2019
+primary=\#FFFF00
+#Thu May 23 21:45:28 CEST 2019
+primary=\#80B380
+#Thu May 23 21:45:30 CEST 2019
+primary=\#663366
+#Thu May 23 21:45:36 CEST 2019
+primtint=\#00FFFF
+#Thu May 23 21:45:43 CEST 2019
+primtint=\#4D001A
+#Thu May 23 21:45:45 CEST 2019
+primtint=\#4D1A4D
+#Thu May 23 21:46:34 CEST 2019
+secondary=\#FF00FF
+#Thu May 23 21:46:36 CEST 2019
+secondtint=\#FF0000
+#Thu May 23 21:48:28 CEST 2019
+primary=\#336633
+#Thu May 23 21:48:33 CEST 2019
+primtint=\#003300
+#Thu May 23 21:48:36 CEST 2019
+secondary=\#FFCCB3
+#Thu May 23 21:48:40 CEST 2019
+secondtint=\#FFCC66
